# my-gd-mod

./: CMakeLists.txt  README.md  dllmain.cpp
.github/workflows/: build.yml
